@@ -8,6 +8,9 @@
 	* lib/qwik/act-searchwords.rb: Ditto.
 	* lib/qwik/act-search.rb: Ditto.
 
+	* lib/qwik/act-search.rb: Bring back search function.
+	* lib/qwik/site-search.rb: Ditto.
+
 2009-09-08  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-pagelist.rb: Fix bug.
